//
// Created by laptop on 6/13/23.
//

#pragma once

namespace production {
    enum class StateType {
        INIT,
        DRAFT,
        MODERATION,
        PUBLISHED
    };
}